--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           }
         };
 
-        var url = "http://139.162.30.171:5000/hackathon?product=" + document.getElementById("product").value;
+        var url = "https://139.162.30.171:5000/hackathon?product=" + document.getElementById("product").value;
         xhttp.open("GET", url, true);
         xhttp.setRequestHeader("origin", "https://tim1234ltp.github.io");
         //xhttp.setRequestHeader("password", "g5324hjkyui12");
