--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           }
         };
 
-        var url = "https://139.162.30.171:5000/hackathon?product=" + document.getElementById("product").value;
+        var url = "http://139.162.30.171:5000/hackathon?product=" + document.getElementById("product").value;
         xhttp.open("GET", cors_api_url + url);
         xhttp.setRequestHeader("origin", "https://tim1234ltp.github.io");
         xhttp.setRequestHeader("X-Requested-With", "XMLHttpRequest");
