--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" >
   
   <link href="custom.css" rel="stylesheet" type="text/css" />
   
@@ -35,7 +36,7 @@
 	  	<li><a href="#home">Home</a></li>
         <li><a href="#about">About Me</a></li>
 		<li><a href="#skills">Skills</a></li>
-		<li><a href="#contact">Contact Me</a></li>
+		<li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </div>
@@ -44,16 +45,39 @@
 <div id="home" class="jumbotron text-center">
   <h1>Hi, I'm Tim</h1> 
   <h1>and I love to start things from 0</h1>
-  <p style="font-size:60%">(which include counting array element)</p>
+  <p style="font-size:50%">(which include counting array element)</p>
 </div>
 
 <!-- Container (Section About) -->
-<div id="about" class="container-fluid">
+<div id="about" class="container-fluid bg-blue">
   <div class="row">
-    <div class="col-sm-12">
-      <h2>About Me</h2><br>
-
+  	<h2>About Me</h2><br>
+    <div class="col-sm-10 slideanim">      
+		<h3 class="well well-lg text-primary">
+		You can call me Tim. <br>
+		I am currently a Computer Science sophomore in The University of Hong Kong, <br>
+		walking step-by-step towards a better version of myself. <br>
+		Just like writing code, there is always an improved verson. <br>
+		<strong>Starting from 0 says nothing about the array length. </strong><br>
+		</h3>
+		<h3 class="well well-lg text-success">
+		My Interests: <br>
+		hiking<i class="fi-mountains"></i> <br>
+		running<i class="material-icons">directions_run</i> <br>
+		cooking<i class="fa fa-cutlery"></i> <br>
+		deep learning<i class="ionicons ion-network"></i> <br>
+		gaming<i class="fa fa-gamepad"></i> <br>
+		<br>
+		<br>		
+		What I hate: <br>
+		<del>insects</del> <br>
+		<del>non-sense product managers and sales team</del> <br>
+		<del>spaghetti code from others</del> <br>		
+		</h3>
     </div>
+	<div class="col-sm-2 slideanim">
+	<img src="images/pp.jpg" height="375" width="200" onclick="alert('Hey, don\'t touch my face, plz')">
+	</div>
   </div>
 </div>
 
@@ -83,6 +107,10 @@
 	<h3>
   	<i class="fa fa-linkedin"></i>
 	<a href="https://linkedin.com/in/tim-po-lam">LinkedIn</a>
+ 	</h3>	
+	<h3>
+  	<i class="fa fa-github"></i>
+	<a href="https://github.com/tim1234ltp">Github</a>
  	</h3>	
 	</div>
 
