--- a/index.html
+++ b/index.html
@@ -80,12 +80,20 @@
 	</div>
   </div>
 </div>
-
+<!--This is how I spend the points on skill tree:-->
 <div id="skills" class="container-fluid bg-grey">
-  <h2 class="text-center">This is how I spend the points on skill tree:</h2>
+  <h2 class="text-center">Skills that I have</h2>
   <div class="row">
     <div class="col-md-12 slideanim">
-	<p>Wow</p>
+	<h3 class="well well-lg text-primary">
+	Limited experience with Java (passed a university course about Java) <br>
+	Limited experience with C++ (passed a university course about C++) <br>
+	Limited experience with HTML+Javascript+CSS+Bootstrap (created few e-forms) <br>
+	Basic C# (created few tiny console applications) <br>
+	Limited experience with OnBase <br>
+	Limited experience with Alfresco <br>
+	Limited experience with Solidwork <br>
+	</h3>
 	</div>
   </div>
   <br>
