Updated info in Jan 2018

--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
 		<br>		
 		What I hate: <br>
 		<del>insects</del> <br>
-		<del>non-sense product managers and sales team</del> <br>
 		<del>spaghetti code from others</del> <br>		
 		</h3>
     </div>
@@ -86,13 +85,13 @@
   <div class="row">
     <div class="col-md-12 slideanim">
 	<h3 class="well well-lg text-primary">
-	Limited experience with Java (passed a university course about Java) <br>
-	Limited experience with C++ (passed a university course about C++) <br>
-	Limited experience with HTML+Javascript+CSS+Bootstrap (created few e-forms) <br>
-	Basic C# (created few tiny console applications) <br>
+	Limited experience with C++, C#, Java <br>
+	Limited experience with SQL <br>
+	Limited experience with HTML+Javascript+CSS+Bootstrap <br>
+	Limited experience with Python ("Python for Data Science" certified by IBM)<br>
 	Limited experience with OnBase <br>
 	Limited experience with Alfresco <br>
-	Limited experience with Solidwork <br>
+	Scrum Fundamentals Certified <br>
 	</h3>
 	</div>
   </div>
