--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <div class="col-sm-10 slideanim">      
 		<h3 class="well well-lg text-primary">
 		You can call me Tim. <br>
-		I am currently a Computer Science sophomore in The University of Hong Kong, <br>
-		walking step-by-step towards a better version of myself. <br>
+		I am currently a Computer Science student in his penultimate year in The University of Hong Kong, <br>
+		moving step-by-step towards a better version of myself. <br>
 		Just like writing code, there is always an improved verson. <br>
 		<strong>Starting from 0 says nothing about the array length. </strong><br>
 		</h3>
@@ -85,12 +85,10 @@
   <div class="row">
     <div class="col-md-12 slideanim">
 	<h3 class="well well-lg text-primary">
-	Limited experience with C++, C#, Java <br>
+  Familiar with Python ("Python for Data Science" certified by IBM)<br>
 	Limited experience with SQL <br>
-	Limited experience with HTML+Javascript+CSS+Bootstrap <br>
-	Limited experience with Python ("Python for Data Science" certified by IBM)<br>
-	Limited experience with OnBase <br>
-	Limited experience with Alfresco <br>
+	Limited experience with HTML+Javascript+Bootstrap <br>
+	Limited experience with EMS (in particular OnBase and Alfresco) <br>
 	Scrum Fundamentals Certified <br>
 	</h3>
 	</div>
