--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		You can call me Tim. <br>
 		I am currently a Computer Science student in his penultimate year in The University of Hong Kong, <br>
 		moving step-by-step towards a better version of myself. <br>
-		Just like writing code, there is always an improved verson. <br>
+		Just like writing code, you can always have an improved version. <br>
 		<strong>Starting from 0 says nothing about the array length. </strong><br>
 		</h3>
 		<h3 class="well well-lg text-success">
@@ -85,7 +85,7 @@
   <div class="row">
     <div class="col-md-12 slideanim">
 	<h3 class="well well-lg text-primary">
-  Familiar with Python ("Python for Data Science" certified by IBM)<br>
+  	Familiar with Python<br>
 	Limited experience with SQL <br>
 	Limited experience with HTML+Javascript+Bootstrap <br>
 	Limited experience with EMS (in particular OnBase and Alfresco) <br>
